@@ -1,7 +1,7 @@
 package com.PracticaVara.springJwt.model.Account;
 
+import com.fasterxml.jackson.annotation.JsonIgnore;
 import jakarta.persistence.*;
-<<<<<<< HEAD
 import lombok.AllArgsConstructor;
 import lombok.Data;
 import lombok.Getter;
@@ -10,25 +10,23 @@ import lombok.Setter;
 
 import org.springframework.boot.context.properties.bind.DefaultValue;
 import org.springframework.lang.NonNull;
-=======
 import lombok.Getter;
 import lombok.Setter;
->>>>>>> 530ca60b0d74dabf86a139d435838508ad43e13e
 import org.springframework.security.core.GrantedAuthority;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 import java.time.LocalDateTime;
+import java.util.ArrayList;
 import java.util.Collection;
+import java.util.Collections;
 import java.util.List;
 
 @Data
 @Entity
-<<<<<<< HEAD
 @NoArgsConstructor
 @AllArgsConstructor
-=======
 @Setter
 @Getter
->>>>>>> 530ca60b0d74dabf86a139d435838508ad43e13e
 @Table(name = "users")
 public class User implements UserDetails {
     @Id
@@ -66,47 +64,14 @@ public class User implements UserDetails {
     @Column(name = "ip_address")
     private String ipAddress;
 
-
-
     @Transient
     private String jwt;
 
-<<<<<<< HEAD
-
-    @JsonIgnore
-    @Override
-    public boolean isAccountNonExpired() {
-        return true;
-    }
-
-    @JsonIgnore
-    @Override
-    public boolean isAccountNonLocked() {
-        return true;
-    }
-
-    @JsonIgnore
-    @Override
-    public boolean isCredentialsNonExpired() {
-        return true;
-    }
-
-    @JsonIgnore
-    @Override
-    public boolean isEnabled() {
-        return true;
-    }
-
-    @JsonIgnore
-=======
->>>>>>> 530ca60b0d74dabf86a139d435838508ad43e13e
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        return List.of();
+        return Collections.singletonList(new SimpleGrantedAuthority(this.getRole().name()));
     }
 
-<<<<<<< HEAD
-=======
     @Override
     public boolean isAccountNonExpired() {
         return UserDetails.super.isAccountNonExpired();
@@ -126,5 +91,4 @@ public class User implements UserDetails {
     public boolean isEnabled() {
         return UserDetails.super.isEnabled();
     }
->>>>>>> 530ca60b0d74dabf86a139d435838508ad43e13e
 }
